chore: clean up repository - only keep backend, frontend, sql, README.md